@@ -155,6 +155,7 @@
 			<version>5.1.5.RELEASE</version>
 		</dependency>
 
+
 	</dependencies>
 
 	<build>
@@ -177,27 +178,27 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
 				<configuration>
 					<argLine>
-						--illegal-access=permit
+						&#45;&#45;illegal-access=permit
 					</argLine>
 				</configuration>
-			</plugin>
+			</plugin>-->
 
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.22.0</version>
 				<configuration>
 					<argLine>
-						--illegal-access=permit
+						&#45;&#45;illegal-access=permit
 					</argLine>
 				</configuration>
-			</plugin>
+			</plugin>-->
 
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
